--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <h1>Heading</h1>
 
-<a href="https://mozzyalong.github.io/index.html">Assignment 1</a>
+<a href="A1.html">Assignment 1</a>
 <p>Paragraph.</p>
 
 </body>
