--- a/A1.html
+++ b/A1.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<head></head>
+<head>
+    <link rel="stylesheet" href="https://mozzyalong.github.io/css/A1.css">
+</head>
 <body>
 
 <h1>Dr. Eleanor Gaye
