--- a/A1.html
+++ b/A1.html
@@ -1,5 +1,14 @@
+<!--
+    Name: Emidio Guidotti
+    File: A1.html
+    Date: 17 January 2024
+    This site shows a letter based
+    on the specifications given online.
+-->>
 <!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="utf-8">
     <link rel="stylesheet" href="https://mozzyalong.github.io/css/A1.css">
 </head>
 <body>
