--- a/A1.html
+++ b/A1.html
@@ -9,11 +9,12 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+
     <link rel="stylesheet" href="https://mozzyalong.github.io/css/A1.css">
 </head>
 <body>
 
-<h1>Dr. Eleanor Gaye
+<div class="sender-column">Dr. Eleanor Gaye
 Awesome Science faculty
 University of Awesome
 Bobtown, CA 99999,
@@ -21,12 +22,14 @@ USA
 Tel: 123-456-7890
 Email: no_reply@example.com
 
-20 January 2016
+20 January 2016</div>
 
-Miss Eileen Dover
+<address>
+    Miss Eileen Dover
 4321 Cliff Top Edge
 Dover, CT9 XXX
-UK</h1>
+UK
+</address>
 
 
 <h1>Re: Eileen Dover university application</h1>
@@ -48,11 +51,11 @@ Third semester: 2 May 2017
 
 Please let me know if this is ok, and if so which start date you would prefer.
 
-You can find more information about important university dates on our website.
+You can find more information about <ul>important university dates</ul> on our website.
 </p>
 
 <h2>Subjects of study</h2>
-<p1>
+<p>
 At the Awesome Science Faculty, we have a pretty open-minded research facility — as long as the subjects fall somewhere in the realm of science and technology. You seem like an intelligent, dedicated researcher, and just the kind of person we'd like to have on our team. Saying that, of the ideas you submitted we were most intrigued by are as follows, in order of priority:
 
 Turning H2O into wine, and the health benefits of Resveratrol (C14H12O3.)
@@ -60,7 +63,7 @@ Measuring the effect on performance of funk bassplayers at temperatures exceedin
 HTML and CSS constructs for representing musical scores.
 
 So please can you provide more information on each of these subjects, including how long you'd expect the research to take, required staff and other resources, and anything else you think we'd need to know? Thanks.
-</p1>
+</p>
 
 <h2>Exotic dance moves</h2>
 <p>
@@ -78,6 +81,7 @@ For more of my research, see my exotic dance research page.
 Yours sincerely,
 Dr Eleanor Gaye
 
-University of Awesome motto: "Be awesome to each other." -- The memoirs of Bill S Preston, Esq</p>
+University of Awesome motto: "Be awesome to each other." -- The memoirs of Bill S Preston, Esq
+</p>
 </body>
 </html>
