--- a/A1.html
+++ b/A1.html
@@ -51,7 +51,7 @@ Third semester: 2 May 2017
 
 Please let me know if this is ok, and if so which start date you would prefer.
 
-You can find more information about <ul>important university dates</ul> on our website.
+You can find more information about <a href="">important university dates</a> on our website.
 </p>
 
 <h2>Subjects of study</h2>
@@ -76,7 +76,7 @@ Before the Icelanders developed fire as a means of getting warm, they used to pr
 Arctic robot dance
 An interesting example of historic misinformation, English explorers in the 1960s believed to have discovered a new dance style characterized by "robotic", stilted movements, being practiced by inhabitants of Northern Alaska and Canada. Later on however it was discovered that they were just moving like this because they were really cold.
 
-For more of my research, see my exotic dance research page.
+For more of my research, see my <a href="">exotic dance research</a> page.
 
 Yours sincerely,
 Dr Eleanor Gaye
