--- a/A1.html
+++ b/A1.html
@@ -14,20 +14,20 @@
 </head>
 <body>
 
-<div class="sender-column">Dr. Eleanor Gaye
-Awesome Science faculty
-University of Awesome
-Bobtown, CA 99999,
-USA
-Tel: 123-456-7890
-Email: no_reply@example.com
+<div class="sender-column">Dr. Eleanor Gaye<br>
+Awesome Science faculty<br>
+University of Awesome<br>
+Bobtown, CA 99999,<br>
+USA<br>
+Tel: 123-456-7890<br>
+Email: no_reply@example.com</div>
 
-20 January 2016</div>
+<div class="sender-column">20 January 2016</div>
 
 <address>
-    Miss Eileen Dover
-4321 Cliff Top Edge
-Dover, CT9 XXX
+    Miss Eileen Dover<br>
+4321 Cliff Top Edge<br>
+Dover, CT9 XXX<br>
 UK
 </address>
 
@@ -37,7 +37,7 @@ UK
 <p>
 Dear Eileen,
 
-Thank you for your recent application to join us at the University of Awesome's science faculty to study as part of your PhD next year. I will answer your questions one by one, in the following sections.
+Thank you for your recent application to join us at the University of Awesome's science faculty to study as part of your <u>PhD</u> next year. I will answer your questions one by one, in the following sections.
 </p>
 
 <h2>Starting dates</h2>
