--- a/A1.html
+++ b/A1.html
@@ -20,9 +20,9 @@ University of Awesome<br>
 Bobtown, CA 99999,<br>
 USA<br>
 Tel: 123-456-7890<br>
-Email: no_reply@example.com</div>
-
-<div class="sender-column">20 January 2016</div>
+Email: no_reply@example.com
+<br><br>
+20 January 2016</div>
 
 <address>
     Miss Eileen Dover<br>
