--- a/A1.html
+++ b/A1.html
@@ -35,8 +35,8 @@ UK
 <h1>Re: Eileen Dover university application</h1>
 
 <p>
-Dear Eileen,
-
+Dear Eileen,<br>
+<br>
 Thank you for your recent application to join us at the University of Awesome's science faculty to study as part of your <u>PhD</u> next year. I will answer your questions one by one, in the following sections.
 </p>
 
