--- a/A1.html
+++ b/A1.html
@@ -71,12 +71,14 @@ So please can you provide more information on each of these subjects, including 
 <p>
 Yes, you are right! As part of my post-doctorate work, I <i>did</i> study exotic tribal dances. To answer your question, my favourite dances are as follows, with definitions:
 </p><p>
-<dd>Polynesian chicken dance</dd><br>
-<dt>A little known but <i>very</i> influential dance dating back as far as 300BC, a whole village would dance around in a circle like chickens, to encourage their livestock to be "fruitful".</dt><br>
-<dd>Icelandic brownian shuffle</dd><br>
-<dt>Before the Icelanders developed fire as a means of getting warm, they used to practice this dance, which involved huddling close together in a circle on the floor, and shuffling their bodies around in imperceptibly tiny, very rapid movements. One of my fellow students used to say that he thought this dance inspired modern styles such as Twerking.</dt><br>
-<dd>Arctic robot dance</dd><br>
-<dt>An interesting example of historic misinformation, English explorers in the 1960s believed to have discovered a new dance style characterized by "robotic", stilted movements, being practiced by inhabitants of Northern Alaska and Canada. Later on however it was discovered that they were just moving like this because they were really cold.</dt>
+<dl>
+<dt>Polynesian chicken dance</dt><br>
+<dd>A little known but <i>very</i> influential dance dating back as far as 300BC, a whole village would dance around in a circle like chickens, to encourage their livestock to be "fruitful".</dd><br>
+<dt>Icelandic brownian shuffle</dt><br>
+<dd>Before the Icelanders developed fire as a means of getting warm, they used to practice this dance, which involved huddling close together in a circle on the floor, and shuffling their bodies around in imperceptibly tiny, very rapid movements. One of my fellow students used to say that he thought this dance inspired modern styles such as Twerking.</dd><br>
+<dt>Arctic robot dance</dt><br>
+<dd>An interesting example of historic misinformation, English explorers in the 1960s believed to have discovered a new dance style characterized by "robotic", stilted movements, being practiced by inhabitants of Northern Alaska and Canada. Later on however it was discovered that they were just moving like this because they were really cold.</dd>
+</dl>
 </p><p>
 For more of my research, see my <a href="">exotic dance research</a> page.
 </p><p>
