--- a/A1.html
+++ b/A1.html
@@ -85,7 +85,7 @@ For more of my research, see my <a href="">exotic dance research</a> page.
 Yours sincerely,</p><p>
 Dr Eleanor Gaye
 </p><p>
-University of Awesome motto: "Be awesome to each other." <i>-- The memoirs of Bill S Preston, Esq</i>
+University of Awesome motto: "Be awesome to each other." -- <i>The memoirs of Bill S Preston, Esq</i>
 </p>
 </body>
 </html>
