--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
 <h1>Heading</h1>
 
-<a href="https://mozzyalong.github.io/A1.html">Assignment 1</a>
+<a href="https://mozzyalong.github.io/A1.html">Assignment 1 part 1, Mark up letter</a>
+<a href="https://mozzyalong.github.io/assets/index.html">Assignment 1 part 2, Birdwatching</a>
 <p>Paragraph.</p>
 
 </body>
