--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <!--The head is where the first things that need to be excecuted go-->
-<title>Page Title</title>
+<title>MozzyAlong and check out these projects</title>
 </head>
 <body>
 
