--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <!--The head is where the first things that need to be excecuted go-->
 <title>MozzyAlong and check out these projects</title>
