--- a/assets/index.html
+++ b/assets/index.html
@@ -17,7 +17,7 @@
 
     <nav>
         <ul>
-            <li>Home</li>
+            <li><span>Home</span></li>
             <li><a href="#">Get started</a></li>
             <li><a href="#">Photos</a></li>
             <li><a href="#">Gear</a></li>
