--- a/assets/index.html
+++ b/assets/index.html
@@ -1,3 +1,10 @@
+<!--
+Name: Emidio Guidotti
+File: index.html
+Date: 24 Jan 2024
+The birdwatching portion of assignment 1.
+-->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
