--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!--
+Name: Emidio Guidotti
+File: Index.html
+Date: 2024/Jan/24
+This file compiles projects
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
