--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ This file compiles projects
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="css/style.css" rel="stylesheet">
+    <link href="https://mozzyalong.github.io/css/style.css" rel="stylesheet">
     <!--The head is where the first things that need to be excecuted go-->
 <title>MozzyAlong and check out these projects</title>
 </head>
