--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@ This file compiles projects
 <a href="https://mozzyalong.github.io/A1.html">Assignment 1 part 1, Mark up letter</a>
 <br>
 <a href="https://mozzyalong.github.io/assets/index.html">Assignment 1 part 2, Birdwatching</a>
+<br>
+<a href="https://mozzyalong.github.io/A2.html">Assignment 2 part 1</a>
 <p>Paragraph.</p>
 
 </body>
