--- a/A2.html
+++ b/A2.html
@@ -101,12 +101,16 @@
       <h1>Mozilla</h1>
       <!-- insert <img> element, link to the small
           version of the Firefox logo -->
+          <img src = "https://mozzyalong.github.io/A2Photos/120RGB.png"> </img>
 
     </header>
 
     <main>
       <article>
         <!-- insert iframe from youtube -->
+
+
+        <iframe src="https://www.youtube.com/watch?v=ojcNcvb1olg" title="Choose Independant", width="400px"></iframe> 
 
         <h2>Rocking the free web</h2>
 
@@ -118,7 +122,12 @@
       <div class="further-info">
         <!-- insert images with srcsets and sizes -->
         <a href="https://www.mozilla.org/en-US/firefox/new/">
-          <img>
+            <img
+            border="0" 
+            alt="W3Schools"
+            srcset="https://mozzyalong.github.io/A2Photos/400RGB.png wee, https://mozzyalong.github.io/A2Photos/120RGB.png"
+            sizes="max-width=500px" 
+            >
         </a>
         <a href="https://www.mozilla.org/">
           <img>
