--- a/A2.html
+++ b/A2.html
@@ -121,16 +121,20 @@
 
       <div class="further-info">
         <!-- insert images with srcsets and sizes -->
+
         <a href="https://www.mozilla.org/en-US/firefox/new/">
-            <img
-            border="0" 
-            alt="W3Schools"
-            srcset="https://mozzyalong.github.io/A2Photos/400RGB.png wee, https://mozzyalong.github.io/A2Photos/120RGB.png"
-            sizes="max-width=500px" 
-            >
+        <picture>
+            <source srcset="https://mozzyalong.github.io/A2Photos/120RGB.png" media="(max-width: 500px)">
+            <img src="https://mozzyalong.github.io/A2Photos/400RGB.png" alt="Firefox">
+          </picture>
+        </a>
+     
         </a>
         <a href="https://www.mozilla.org/">
-          <img>
+        <picture>
+            <source srcset="https://mozzyalong.github.io/A2Photos/120DINO.png" media="(max-width: 500px)">
+            <img src="https://mozzyalong.github.io/A2Photos/400DINO.png" alt="Dinosaur">
+        </picture>
         </a>
         <a href="https://addons.mozilla.org/">
           <img>
