--- a/A2.html
+++ b/A2.html
@@ -137,7 +137,10 @@
         </picture>
         </a>
         <a href="https://addons.mozilla.org/">
-          <img>
+            <picture>
+                <source srcset="https://mozzyalong.github.io/A2Photos/120ADD.png" media="(max-width: 500px)">
+                <img src="https://mozzyalong.github.io/A2Photos/400ADD.png" alt="Firefox">
+              </picture>
         </a>
         <a href="https://developer.mozilla.org/en-US/">
           <img>
