--- a/A2.html
+++ b/A2.html
@@ -138,18 +138,22 @@
         </a>
         <a href="https://addons.mozilla.org/">
             <picture>
-                <source srcset="https://mozzyalong.github.io/A2Photos/120ADD.png" media="(max-width: 500px)">
-                <img src="https://mozzyalong.github.io/A2Photos/400ADD.png" alt="Firefox">
+                <source srcset="https://mozzyalong.github.io/A2Photos/120ADD.jpg" media="(max-width: 500px)">
+                <img src="https://mozzyalong.github.io/A2Photos/400ADD.jpg" alt="Add">
               </picture>
         </a>
         <a href="https://developer.mozilla.org/en-US/">
-          <img>
+          <img src="https://mozzyalong.github.io/A2Photos/mdn.svg">
         </a>
         <div class="clearfix"></div>
       </div>
 
       <div class="red-panda">
         <!-- insert picture element -->
+        <picture>
+            <source srcset="https://mozzyalong.github.io/A2Photos/600PANDA.jpg" media="(max-width: 600px)">
+            <img src="https://mozzyalong.github.io/A2Photos/1200PANDA.jpg" alt="Add">
+          </picture>
       </div>
 
     </main>
