--- a/A2.html
+++ b/A2.html
@@ -101,7 +101,7 @@
       <h1>Mozilla</h1>
       <!-- insert <img> element, link to the small
           version of the Firefox logo -->
-          <img src = "https://mozzyalong.github.io/A2Photos/120RGB.png"> </img>
+          <img src = "./A2Photos/120RGB.png"> </img>
 
     </header>
 
@@ -124,26 +124,26 @@
 
         <a href="https://www.mozilla.org/en-US/firefox/new/">
         <picture>
-            <source srcset="https://mozzyalong.github.io/A2Photos/120RGB.png" media="(max-width: 500px)">
-            <img src="https://mozzyalong.github.io/A2Photos/400RGB.png" alt="Firefox">
+            <source srcset="./A2Photos/120RGB.png" media="(max-width: 500px)">
+            <img src="./A2Photos/400RGB.png" alt="Firefox">
           </picture>
         </a>
      
         </a>
         <a href="https://www.mozilla.org/">
         <picture>
-            <source srcset="https://mozzyalong.github.io/A2Photos/120DINO.png" media="(max-width: 500px)">
-            <img src="https://mozzyalong.github.io/A2Photos/400DINO.png" alt="Dinosaur">
+            <source srcset="./A2Photos/120DINO.png" media="(max-width: 500px)">
+            <img src="./A2Photos/400DINO.png" alt="Dinosaur">
         </picture>
         </a>
         <a href="https://addons.mozilla.org/">
             <picture>
-                <source srcset="https://mozzyalong.github.io/A2Photos/120ADD.jpg" media="(max-width: 500px)">
-                <img src="https://mozzyalong.github.io/A2Photos/400ADD.jpg" alt="Add">
+                <source srcset="./A2Photos/120ADD.jpg" media="(max-width: 500px)">
+                <img src="./A2Photos/400ADD.jpg" alt="Add">
               </picture>
         </a>
         <a href="https://developer.mozilla.org/en-US/">
-          <img src="https://mozzyalong.github.io/A2Photos/mdn.svg">
+          <img src="./A2Photos/mdn.svg">
         </a>
         <div class="clearfix"></div>
       </div>
@@ -151,8 +151,8 @@
       <div class="red-panda">
         <!-- insert picture element -->
         <picture>
-            <source srcset="https://mozzyalong.github.io/A2Photos/600PANDA.jpg" media="(max-width: 600px)">
-            <img src="https://mozzyalong.github.io/A2Photos/1200PANDA.jpg" alt="Add">
+            <source srcset="./A2Photos/600PANDA.jpg" media="(max-width: 600px)">
+            <img src="./A2Photos/1200PANDA.jpg" alt="Add">
           </picture>
       </div>
 
