--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ This file compiles projects
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="https://mozzyalong.github.io/css/style.css" rel="stylesheet">
+    <link href="./css/style.css" rel="stylesheet">
     <!--The head is where the first things that need to be excecuted go-->
 <title>MozzyAlong and check out these projects</title>
 </head>
@@ -16,11 +16,11 @@ This file compiles projects
 
 <h1>Heading</h1>
 
-<a href="https://mozzyalong.github.io/A1.html">Assignment 1 part 1, Mark up letter</a>
+<a href="./A1.html">Assignment 1 part 1, Mark up letter</a>
 <br>
-<a href="https://mozzyalong.github.io/assets/index.html">Assignment 1 part 2, Birdwatching</a>
+<a href="./assets/index.html">Assignment 1 part 2, Birdwatching</a>
 <br>
-<a href="https://mozzyalong.github.io/A2.html">Assignment 2 part 1</a>
+<a href="./A2.html">Assignment 2 part 1</a>
 <p>Paragraph.</p>
 
 </body>
