--- a/A1.html
+++ b/A1.html
@@ -10,7 +10,7 @@
 <head>
     <meta charset="utf-8">
 
-    <link rel="stylesheet" href="https://mozzyalong.github.io/css/A1.css">
+    <link rel="stylesheet" href="./css/A1.css">
 </head>
 <body>
 
