--- a/A2.html
+++ b/A2.html
@@ -1,3 +1,9 @@
+<!--
+    Name: Emidio Guidotti
+    File: A2.html
+    Date: 9 February 2024
+    This site shows info on mozzila firefox.
+-->
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
