--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@ This file compiles projects
 <a href="./assets/index.html">Assignment 1 part 2, Birdwatching</a>
 <br>
 <a href="./A2.html">Assignment 2 part 1</a>
+<br>
+<a href ="./A22.html">Assignment 2 part 2</a>
 <p>Paragraph.</p>
 
 </body>
