--- a/A22.html
+++ b/A22.html
@@ -1,3 +1,9 @@
+<!--
+    Name: Emidio Guidotti
+    File: A22.html
+    Date: 13 February 2024
+    This site is a table about planets.
+-->
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
