--- a/A3.html
+++ b/A3.html
@@ -1,7 +1,14 @@
-<!doctype html>
+<!--
+	Name: Emidio Guidotti
+	File: A3.html
+	Date: 21 February 2024
+	. -->
+
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
+<head>
+    <meta charset="utf-8">
+
     <meta name="viewport" content="width=device-width" />
     <title>Formatting a biography</title>
     <style>
