--- a/A32.html
+++ b/A32.html
@@ -1,7 +1,14 @@
+<!--
+	Name: Emidio Guidotti
+	File: A32.html
+	Date: 21 February 2024
+	. -->
+
 <!DOCTYPE html>
-<html lang="en-US">
-  <head>
+<html lang="en">
+<head>
     <meta charset="utf-8">
+
     <meta name="viewport" content="width=device-width">
     <title>Cool box</title>
     
