--- a/A33.html
+++ b/A33.html
@@ -1,7 +1,14 @@
+<!--
+	Name: Emidio Guidotti
+	File: A33.html
+	Date: 21 February 2024
+	. -->
+
 <!DOCTYPE html>
-<html lang="en-US">
-  <head>
+<html lang="en">
+<head>
     <meta charset="utf-8">
+
     <meta name="viewport" content="width=device-width">
     <title>St Huxley's Community College</title>
     <link href="style.css" type="text/css" rel="stylesheet">
