--- a/A34.html
+++ b/A34.html
@@ -1,7 +1,14 @@
+<!--
+	Name: Emidio Guidotti
+	File: A34.html
+	Date: 21 February 2024
+	. -->
+
 <!DOCTYPE html>
-<html lang="en-US">
-  <head>
+<html lang="en">
+<head>
     <meta charset="utf-8">
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Layout Task</title>
     <link href="styles.css" rel="stylesheet" type="text/css">
