--- a/A3.html
+++ b/A3.html
@@ -21,14 +21,23 @@
       }
 
       h1 {
-        color: #375e97;
+        color: hotpink;
         font-size: 2em;
         font-family: Georgia, "Times New Roman", Times, serif;
-        border-bottom: 1px solid #375e97;
+        border-bottom: 10px dotted purple;
       }
 
       h2 {
         font-size: 1.5em;
+        font-style: italic;
+      }
+
+      ul {
+        background-color: #eeeeee;
+        border: 5px solid purple;
+        padding-right: 10px;
+        padding-top: 10px;
+        padding-bottom: 10px;
       }
 
       .job-title {
@@ -43,6 +52,7 @@
 
       a:hover {
         text-decoration: none;
+        color: green;
       }
     </style>
   </head>
