--- a/A32.html
+++ b/A32.html
@@ -10,6 +10,8 @@
     <meta charset="utf-8">
 
     <meta name="viewport" content="width=device-width">
+
+    <link rel="stylesheet" href="./css/A32.css">
     <title>Cool box</title>
     
   </head>
