--- a/A34.html
+++ b/A34.html
@@ -11,7 +11,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Layout Task</title>
-    <link href="styles.css" rel="stylesheet" type="text/css">
+    <link href="./css/A34.css" rel="stylesheet" type="text/css">
   </head>
 
 <body>
@@ -45,7 +45,7 @@
       <h1>
         An Exciting Blog Post
       </h1>
-      <img src="images/balloon-sq6.jpg" alt="placeholder" class="feature">
+      <img src="./A3Photos/balloon-sq6.jpg" alt="placeholder" class="feature">
       <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon
         azuki bean garlic.</p>
 
@@ -73,19 +73,19 @@
       </h2>
       <ul class="photos">
         <li>
-          <img src="images/balloon-sq1.jpg" alt="placeholder">
+          <img src="./A3Photos/balloon-sq1.jpg" alt="placeholder">
         </li>
         <li>
-          <img src="images/balloon-sq2.jpg" alt="placeholder">
+          <img src="./A3Photos/balloon-sq2.jpg" alt="placeholder">
         </li>
         <li>
-          <img src="images/balloon-sq3.jpg" alt="placeholder">
+          <img src="./A3Photos/balloon-sq3.jpg" alt="placeholder">
         </li>
         <li>
-          <img src="images/balloon-sq4.jpg" alt="placeholder">
+          <img src="./A3Photos//balloon-sq4.jpg" alt="placeholder">
         </li>
         <li>
-          <img src="images/balloon-sq5.jpg" alt="placeholder">
+          <img src="./A3Photos//balloon-sq5.jpg" alt="placeholder">
         </li>
       </ul>
 
