--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@ This file compiles projects
 <a href="./A2.html">Assignment 2 part 1</a>
 <br>
 <a href ="./A22.html">Assignment 2 part 2</a>
+<br>
+<a href ="./A3.html">Assignment 3 part 1</a>
+<br>
+<a href ="./A32.html">Assignment 3 part 2</a>
+<br>
+<a href ="./A33.html">Assignment 3 part 3</a>
+<br>
+<a href ="./A34.html">Assignment 3 part 4</a>
+
 <p>Paragraph.</p>
 
 </body>
