--- a/A3/A32.html
+++ b/A3/A32.html
@@ -11,7 +11,7 @@
 
     <meta name="viewport" content="width=device-width">
 
-    <link rel="stylesheet" href="./css/A32.css">
+    <link rel="stylesheet" href="../css/A32.css">
     <title>Cool box</title>
     
   </head>
