--- a/A2/A22.html
+++ b/A2/A22.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Table template</title>
-    <link href="./css/A2.css" rel="stylesheet" type="text/css">
+    <link href="../css/A2.css" rel="stylesheet" type="text/css">
   </head>
   <body>
 
