--- a/A3/A33.html
+++ b/A3/A33.html
@@ -11,7 +11,7 @@
 
     <meta name="viewport" content="width=device-width">
     <title>St Huxley's Community College</title>
-    <link href="./css/A33.css" type="text/css" rel="stylesheet">
+    <link href="../css/A33.css" type="text/css" rel="stylesheet">
   </head>
   <body>
 
@@ -22,7 +22,7 @@
   <section>
       <h2>Brave new world</h2>
 
-      <p>It's a brave new world out there. Our children are being put in increasing more competitive situations, both during recreation, and as they start to move into the adult world of <a href="https://en.wikipedia.org/wiki/Examination">examinations</a><img src="./A3Photos/link.png", width="10px", height="10px"> <a href="https://en.wikipedia.org/wiki/Jobs">jobs</a><img src="./A3Photos/link.png", width="10px", height="10px">, <a href="https://en.wikipedia.org/wiki/Career">careers</a><img src="./A3Photos/link.png", width="10px", height="10px">, and other life choices. Having the wrong mindset, becoming <a href="https://en.wikipedia.org/wiki/Emotion">too emotional</a><img src="./A3Photos/link.png", width="10px", height="10px">, or making the wrong choices can contribute to them experiencing difficulty in taking their rightful place in today's ideal society.</p>
+      <p>It's a brave new world out there. Our children are being put in increasing more competitive situations, both during recreation, and as they start to move into the adult world of <a href="https://en.wikipedia.org/wiki/Examination">examinations</a><img src="../A3Photos/link.png", width="10px", height="10px"> <a href="https://en.wikipedia.org/wiki/Jobs">jobs</a><img src="../A3Photos/link.png", width="10px", height="10px">, <a href="https://en.wikipedia.org/wiki/Career">careers</a><img src="../A3Photos/link.png", width="10px", height="10px">, and other life choices. Having the wrong mindset, becoming <a href="https://en.wikipedia.org/wiki/Emotion">too emotional</a><img src="../A3Photos/link.png", width="10px", height="10px">, or making the wrong choices can contribute to them experiencing difficulty in taking their rightful place in today's ideal society.</p>
 
       <p>As concerned parents, guardians or carers, you will no doubt want to give your children the best possible start in life — and you've come to the right place.</p>
 
