--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@ This file compiles projects
 
 <h1>Heading</h1>
 
-<a href="./A1.html">Assignment 1 part 1, Mark up letter</a>
+<a href="./A1/A1.html">Assignment 1 part 1, Mark up letter</a>
 <br>
 <a href="./assets/index.html">Assignment 1 part 2, Birdwatching</a>
 <br>
-<a href="./A2.html">Assignment 2 part 1</a>
+<a href="./A2/A2.html">Assignment 2 part 1</a>
 <br>
-<a href ="./A22.html">Assignment 2 part 2</a>
+<a href ="./A2/A22.html">Assignment 2 part 2</a>
 <br>
-<a href ="./A3.html">Assignment 3 part 1</a>
+<a href ="./A3/A3.html">Assignment 3 part 1</a>
 <br>
-<a href ="./A32.html">Assignment 3 part 2</a>
+<a href ="./A3/A32.html">Assignment 3 part 2</a>
 <br>
-<a href ="./A33.html">Assignment 3 part 3</a>
+<a href ="./A3/A33.html">Assignment 3 part 3</a>
 <br>
-<a href ="./A34.html">Assignment 3 part 4</a>
+<a href ="./A3/A34.html">Assignment 3 part 4</a>
 
 <p>Paragraph.</p>
 
