--- a/A4/A4.html
+++ b/A4/A4.html
@@ -1,3 +1,10 @@
+<!--
+	Name: Emidio Guidotti
+	File: A4.html
+	Date: 22 March 2024
+	Generate some silly stories
+     -->
+
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
