--- a/A4/A42.html
+++ b/A4/A42.html
@@ -1,3 +1,10 @@
+<!--
+	Name: Emidio Guidotti
+	File: A42.html
+	Date: 22 March 2024
+	Display Photos
+     -->
+
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
