--- a/A4/A43.html
+++ b/A4/A43.html
@@ -1,3 +1,10 @@
+<!--
+	Name: Emidio Guidotti
+	File: A43.html
+	Date: 22 March 2024
+	Bounce Some Balls
+     -->
+
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
