--- a/A4/A44.html
+++ b/A4/A44.html
@@ -1,3 +1,10 @@
+<!--
+	Name: Emidio Guidotti
+	File: A44.html
+	Date: 22 March 2024
+	Improve upon A43
+     -->
+
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
