--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@ This file compiles projects
 <a href ="./A3/A33.html">Assignment 3 part 3</a>
 <br>
 <a href ="./A3/A34.html">Assignment 3 part 4</a>
+<br>
+<a href ="./A4/A4.html">Assignment 3 part 4</a>
+<br>
+<a href ="./A4/A42.html">Assignment 3 part 4</a>
+<br>
+<a href ="./A4/A43.html">Assignment 3 part 4</a>
+<br>
+<a href ="./A4/A44.html">Assignment 3 part 4</a>
 
 <p>Paragraph.</p>
 
