--- a/A4/A4.html
+++ b/A4/A4.html
@@ -57,5 +57,7 @@
     </div>
     <!-- Thanks a lot to Willy Aguirre for his help with the code for this assessment -->
     <p class="story"></p>
+
+    <script src="../js/A4.js"></script>
   </body>
 </html>
