--- a/index.html
+++ b/index.html
@@ -20,25 +20,25 @@ This file compiles projects
 <br>
 <a href="./assets/index.html">Assignment 1 part 2, Birdwatching</a>
 <br>
-<a href="./A2/A2.html">Assignment 2 part 1</a>
+<a href="./A2/A2.html">Assignment 2 part 1, Rocking the Free Web</a>
 <br>
-<a href ="./A2/A22.html">Assignment 2 part 2</a>
+<a href ="./A2/A22.html">Assignment 2 part 2, Planets</a>
 <br>
-<a href ="./A3/A3.html">Assignment 3 part 1</a>
+<a href ="./A3/A3.html">Assignment 3 part 1, Web Developer Information</a>
 <br>
-<a href ="./A3/A32.html">Assignment 3 part 2</a>
+<a href ="./A3/A32.html">Assignment 3 part 2, Cool Box</a>
 <br>
-<a href ="./A3/A33.html">Assignment 3 part 3</a>
+<a href ="./A3/A33.html">Assignment 3 part 3, St Hux</a>
 <br>
-<a href ="./A3/A34.html">Assignment 3 part 4</a>
+<a href ="./A3/A34.html">Assignment 3 part 4, Photography</a>
 <br>
-<a href ="./A4/A4.html">Assignment 4 part 1</a>
+<a href ="./A4/A4.html">Assignment 4 part 1, Story Generator</a>
 <br>
-<a href ="./A4/A42.html">Assignment 4 part 2</a>
+<a href ="./A4/A42.html">Assignment 4 part 2, Image Gallery</a>
 <br>
-<a href ="./A4/A43.html">Assignment 4 part 3</a>
+<a href ="./A4/A43.html">Assignment 4 part 3, Balls Bounce</a>
 <br>
-<a href ="./A4/A44.html">Assignment 4 part 4</a>
+<a href ="./A4/A44.html">Assignment 4 part 4, Sinister Sphere</a>
 
 <p>Paragraph.</p>
 
