--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@ This file compiles projects
 <a href ="./A4/A43.html">Assignment 4 part 3, Balls Bounce</a>
 <br>
 <a href ="./A4/A44.html">Assignment 4 part 4, Sinister Sphere</a>
+<br>
+<a href ="./A5/A5.html">Assignment 5, Wildlife Website</a>
 
 <p>Paragraph.</p>
 
