--- a/A5/A5.html
+++ b/A5/A5.html
@@ -24,48 +24,51 @@
 
   <body>
     <div class="header">
-      <font size="7">Welcome to our wildlife website</font>
+      <h1><font size="7">Welcome to our wildlife website</font></h1>
     </div>
 
-    <div class="nav">
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Our team</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">Blog</a></li>
-      </ul>
+    <nav>
+      <div class="nav">
+        <ul>
+          <li><a href="#" tabindex="1">Home</a></li>
+          <li><a href="#" tabindex="2">Our team</a></li>
+          <li><a href="#" tabindex="3">Projects</a></li>
+          <li><a href="#" tabindex="4">Blog</a></li>
+        </ul>
 
-      <form class="search">
-        <input type="search" name="q" placeholder="Search query">
-        <input type="submit" value="Go!">
-      </form>
-    </div>
+        <form class="search">
+          <input type="search" name="q" placeholder="Search query" tabindex="5" aria-label="Search Bar">
+          <input type="submit" value="Go!" tabindex="6">
+        </form>
+      </div>
+    </nav>
 
     <main>
       <article>
-        <font size="6">The trouble with Bears</font>
+        <h2><font size="6">The trouble with Bears</font></h2>
         <br><br>
-        By Evan Wild
+        <p>By Evan Wild</p>
         <br><br>
-        Tall, lumbering, angry, dangerous. The real live bears of this world are proud, independent creatures, self-serving and always on the hunt for food. Nothing like the bears you see on TV, like Baloo from renowned documentary, The Jungle Book.
+        <p>Tall, lumbering, angry, dangerous. The real live bears of this world are proud, independent creatures, self-serving and always on the hunt for food. Nothing like the bears you see on TV, like Baloo from renowned documentary, The Jungle Book.</p>
         <br><br>
-        So what are bears really like, and why does the world's media portray them with such a skewed vision? In this article we try to answer those questions, and give you a real insight into the life of the bear.
+        <p>So what are bears really like, and why does the world's media portray them with such a skewed vision? In this article we try to answer those questions, and give you a real insight into the life of the bear.</p>
         <br><br>
-        <font size="5">Types of bear</font>
+        <h2><font size="5">Types of bear</font></h2>
         <br><br>
-        Bears come in two varieties — large and medium. You don't get small bears. If you have seen a small bear, then it was in fact probably a baby bear (cub) from another species.
+        <p>Bears come in two varieties — large and medium. You don't get small bears. If you have seen a small bear, then it was in fact probably a baby bear (cub) from another species.</p>
         <br><br>
-        Bears can also be classified in terms of their habitat — both large and medium bears are just as at home in urban areas as they are in the countryside. Different habitats encourange different behaviour however, as you'll find out below. The below table also gives you some useful facts about bears.
+        <p>Bears can also be classified in terms of their habitat — both large and medium bears are just as at home in urban areas as they are in the countryside. Different habitats encourange different behaviour however, as you'll find out below. The below table also gives you some useful facts about bears.</p>
         <br><br>
         <table>
+          <summary>Classification table for Wild bears as well as Brown and Black bears.</summary>
           <thead>
             <tr>
-              <td>Bear Type</td>
-              <td>Coat</td>
-              <td>Adult size</td>
-              <td>Habitat</td>
-              <td>Lifespan</td>
-              <td>Diet</td>
+              <th scope="row">Bear Type</th>
+              <th scope="col">Coat</th>
+              <th scope="col">Adult size</th>
+              <th scope="col">Habitat</th>
+              <th scope="col">Lifespan</th>
+              <th scope="col">Diet</th>
             </tr>
           </thead>
           <tbody>
@@ -88,61 +91,62 @@
           </tbody>
         </table>
 
-        <font size="5">Habitats and Eating habits</font>
+        <h2><font size="5">Habitats and Eating habits</font></h2>
         <br><br>
-        Wild bears eat a variety of meat, fish, fruit, nuts, and other natually growing ingredients. In general they will hunt for food themselves in woodland or rivers, but at a push they will track down their sustenance from farms or country houses. They tend to live in relative isolation, in caves, tents, or cottages.
+        <p>Wild bears eat a variety of meat, fish, fruit, nuts, and other natually growing ingredients. In general they will hunt for food themselves in woodland or rivers, but at a push they will track down their sustenance from farms or country houses. They tend to live in relative isolation, in caves, tents, or cottages.</p>
         <br><br>
-        <img src="../A5Media/wild-bear.jpg">
+        <img src="../A5Media/wild-bear.jpg", aria-label="A wild bear." alt="A wild bear.">
         <br><br>
-        Urban (gentrified) bears on the other hand have largely abandoned the old ways. They will hunt other urban creatures if necessary (including other predators like rats and foxes), but prefer to scavenge from readily available urban food outlets like dumpsters, bins, and fast food joints. When food has proven scarce, urban bears have even been known to break into people's kitchens and steal essentials like baked beans, ready meals, and microwave ovens.
+        <p>Urban (gentrified) bears on the other hand have largely abandoned the old ways. They will hunt other urban creatures if necessary (including other predators like rats and foxes), but prefer to scavenge from readily available urban food outlets like dumpsters, bins, and fast food joints. When food has proven scarce, urban bears have even been known to break into people's kitchens and steal essentials like baked beans, ready meals, and microwave ovens.</p>
         <br><br>
-        <img src="../A5Media/urban-bear.jpg">
+        <img src="../A5Media/urban-bear.jpg", aria-label="An urban bear." alt="An urban bear.">
         <br><br>
-        Urban bears will sleep anywhere they can, from bus shelters and parks, to the toilets in McDonalds, to their own apartment.
+        <p>Urban bears will sleep anywhere they can, from bus shelters and parks, to the toilets in McDonalds, to their own apartment.</p>
         <br><br>
-        <font size="5">Mating rituals</font>
+        <h2><font size="5">Mating rituals</font></h2>
         <br><br>
-        Bears are romantic creatures by nature, and will naturally look for a mate that they can spend the rest of their lives with. They will woo a potential suitor by making their dwelling look attractive — for example with cave paintings or a bed of reeds in the case of a wild bear, and mood lighting and a Michael Bublé CD in the case of an urban bear.
+        <p>Bears are romantic creatures by nature, and will naturally look for a mate that they can spend the rest of their lives with. They will woo a potential suitor by making their dwelling look attractive — for example with cave paintings or a bed of reeds in the case of a wild bear, and mood lighting and a Michael Bublé CD in the case of an urban bear.</p>
         <br><br>
-        The following audio clip contains a fact file providing more details about bear mating rituals, along with samples and quotes from experts.
+        <p>The following audio clip contains a fact file providing more details about bear mating rituals, along with samples and quotes from experts.</p>
         <br><br>
-        <audio controls>
+        <audio controls tabindex="7" aria-label="Bear Facts">
           <source src="../A5Media/bear.mp3" type="audio/mp3">
           <source src="../A5Media/bear.ogg" type="audio/ogg">
           <p>It looks like your browser doesn't support HTML5 audio players.</p>
         </audio>
+        <p>This isn't really an audio file, but it is a file you can transcribe!</p>
 
         <aside>
 
-          <font size="5">About the author</font>
+          <h2><font size="5">About the author</font></h2>
         <br><br>
-          Evan Wild is an unemployed plumber from Doncaster, who has been really "in to" wildlife since childhood. He once went to Chester Zoo on holiday, but got ill after eating a doner kebab.
+          <p>Evan Wild is an unemployed plumber from Doncaster, who has been really "in to" wildlife since childhood. He once went to Chester Zoo on holiday, but got ill after eating a doner kebab.</p>
         <br><br>
-          He has never seen a bear, but once read a Daily Mail article about them, and thinks they sound cool.
+          <p>He has never seen a bear, but once read a Daily Mail article about them, and thinks they sound cool.</p>
 
         </aside>
         <section class="comments">
-          <div class="show-hide">Show comments</div>
+          <div class="show-hide" tabindex="8">Show comments</div>
 
           <div class="comment-wrapper">
 
-            <font size="6">Add comment</font>
+            <h2><font size="6">Add comment</font></h2>
 
             <form class="comment-form">
-              <div class="flex-pair">
+              <div class="name">
                 Your name:
-                <input type="text" name="name" id="name" placeholder="Enter your name">
+                <input type="text" name="name" id="name" placeholder="Enter your name" tabindex="9">
               </div>
-              <div class="flex-pair">
+              <div class="comment">
                 Your comment:
-                <input type="text" name="comment" id="comment" placeholder="Enter your comment">
+                <input type="text" name="comment" id="comment" placeholder="Enter your comment" tabindex="10">
               </div>
               <div>
-                <input type="submit" value="Submit comment">
+                <input type="submit" value="Submit comment" tabindex="11">
               </div>
             </form>
 
-            <font size="6">Comments</font>
+            <h2><font size="6">Comments</font></h2>
 
             <ul class="comment-container">
 
@@ -164,11 +168,11 @@
         <font size="6">Related</font>
 
         <ul>
-          <li><a href="#">The trouble with Bees</a></li>
-          <li><a href="#">The trouble with Otters</a></li>
-          <li><a href="#">The trouble with Penguins</a></li>
-          <li><a href="#">The trouble with Octopi</a></li>
-          <li><a href="#">The trouble with Lemurs</a></li>
+          <li><a href="#" tabindex="12">The trouble with Bees</a></li>
+          <li><a href="#" tabindex="13">The trouble with Otters</a></li>
+          <li><a href="#" tabindex="14">The trouble with Penguins</a></li>
+          <li><a href="#" tabindex="15">The trouble with Octopi</a></li>
+          <li><a href="#" tabindex="16">The trouble with Lemurs</a></li>
         </ul>
       </div>
     </main>
