--- a/A5/A5.html
+++ b/A5/A5.html
@@ -2,7 +2,7 @@
 	Name: Emidio
 	File: A5.html
 	Date: 10 April 2024
-    Purpose: Display the Wildlife Website
+  Purpose: Display the Wildlife Website
 -->
 
 
@@ -27,6 +27,7 @@
       <h1><font size="7">Welcome to our wildlife website</font></h1>
     </div>
 
+    <!--Nav menu-->
     <nav>
       <div class="nav">
         <ul>
@@ -114,6 +115,7 @@
           <source src="../A5Media/bear.ogg" type="audio/ogg">
           <p>It looks like your browser doesn't support HTML5 audio players.</p>
         </audio>
+        <!--Extra caption to transcribe the audio-->
         <p>This isn't really an audio file, but it is a file you can transcribe!</p>
 
         <aside>
