--- a/A5/A5.html
+++ b/A5/A5.html
@@ -54,7 +54,7 @@
         <br><br>
         <p>So what are bears really like, and why does the world's media portray them with such a skewed vision? In this article we try to answer those questions, and give you a real insight into the life of the bear.</p>
         <br><br>
-        <h2><font size="5">Types of bear</font></h2>
+        <h3><font size="5">Types of bear</font></h3>
         <br><br>
         <p>Bears come in two varieties — large and medium. You don't get small bears. If you have seen a small bear, then it was in fact probably a baby bear (cub) from another species.</p>
         <br><br>
@@ -92,7 +92,7 @@
           </tbody>
         </table>
 
-        <h2><font size="5">Habitats and Eating habits</font></h2>
+        <h3><font size="5">Habitats and Eating habits</font></h3>
         <br><br>
         <p>Wild bears eat a variety of meat, fish, fruit, nuts, and other natually growing ingredients. In general they will hunt for food themselves in woodland or rivers, but at a push they will track down their sustenance from farms or country houses. They tend to live in relative isolation, in caves, tents, or cottages.</p>
         <br><br>
@@ -120,7 +120,7 @@
 
         <aside>
 
-          <h2><font size="5">About the author</font></h2>
+          <h3><font size="5">About the author</font></h3>
         <br><br>
           <p>Evan Wild is an unemployed plumber from Doncaster, who has been really "in to" wildlife since childhood. He once went to Chester Zoo on holiday, but got ill after eating a doner kebab.</p>
         <br><br>
@@ -167,7 +167,7 @@
       </article>
 
       <div class="secondary">
-        <font size="6">Related</font>
+        <h2><font size="6">Related</font></h2>
 
         <ul>
           <li><a href="#" tabindex="12">The trouble with Bees</a></li>
