--- a/A5/A5.html
+++ b/A5/A5.html
@@ -113,7 +113,8 @@
         <audio controls tabindex="7" aria-label="Bear Facts">
           <source src="../A5Media/bear.mp3" type="audio/mp3">
           <source src="../A5Media/bear.ogg" type="audio/ogg">
-          <p>It looks like your browser doesn't support HTML5 audio players.</p>
+          <p><a href="../A5Media/bear.mp3">It looks like your browser doesn't support HTML5 audio players.</a></p>
+          
         </audio>
         <!--Extra caption to transcribe the audio-->
         <p>This isn't really an audio file, but it is a file you can transcribe!</p>
